@@ -2,10 +2,13 @@ package com.vnpost.service.impl;
 
 import com.vnpost.converter.PostageFinaceConverter;
 import com.vnpost.dto.PostageFinaceDTO;
-import com.vnpost.entity.PostageFinaceEntity;
+import com.vnpost.repository.entity.PostageFinaceEntity;
 import com.vnpost.repository.PostageFinaceRepository;
 import com.vnpost.service.IPostageFinaceService;
 import com.vnpost.utils.FileUtils;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -14,64 +17,56 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
+@RequiredArgsConstructor
 public class PostageFinaceService implements IPostageFinaceService {
-    @Autowired
     private PostageFinaceConverter converter;
-    @Autowired
     private PostageFinaceRepository postageFinaceRepository;
-    @Autowired
     private FileUtils fileUtils;
+
     @Override
     public List<PostageFinaceDTO> findAll() {
         return postageFinaceRepository.findAll()
-                .stream().map(item -> converter.convertToDTO(item)).collect(Collectors.toList());
+                .stream().map(converter::convertToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<PostageFinaceDTO> findAll(Pageable pageable) {
         return postageFinaceRepository.findAll(pageable)
-                .stream().map(item -> converter.convertToDTO(item)).collect(Collectors.toList());
+                .map(converter::convertToDTO)
+                .toList();
     }
 
     @Override
     public PostageFinaceDTO findById(Long id) {
-        if (id==null){
-            return converter.convertToDTO(postageFinaceRepository.findById(id).get());
-        }
-        return new PostageFinaceDTO();
+        return converter.convertToDTO(postageFinaceRepository.findById(id).get());
     }
 
     @Override
     public PostageFinaceDTO save(PostageFinaceDTO postageFinaceDTO) {
-        Long id = postageFinaceDTO.getId();
-        if (id==null){
-            String image = fileUtils.SaveFile(postageFinaceDTO.getMultipartFile());
-            if (!image.equals("")){
-                postageFinaceDTO.setImage(image);
-            }
-            PostageFinaceEntity entity = converter.convertToEntity(postageFinaceDTO);
-            return converter.convertToDTO(postageFinaceRepository.save(entity));
+        String image = fileUtils.SaveFile(postageFinaceDTO.getMultipartFile());
+        if (!image.equals("")) {
+            postageFinaceDTO.setImage(image);
         }
-        return new PostageFinaceDTO();
+        PostageFinaceEntity entity = converter.convertToEntity(postageFinaceDTO);
+        return converter.convertToDTO(postageFinaceRepository.save(entity));
     }
 
     @Override
     public PostageFinaceDTO update(PostageFinaceDTO postageFinaceDTO) {
         Long id = postageFinaceDTO.getId();
-        if (id!=null){
-            PostageFinaceEntity entity = converter.convertToEntity(postageFinaceDTO);
-            PostageFinaceEntity entityInDb = postageFinaceRepository.findById(id).get();
-            String image = fileUtils.SaveFile(postageFinaceDTO.getMultipartFile());
-            if (!image.equals("")){
-                entity.setImage(image);
-            }else {
-                entity.setImage(entityInDb.getImage());
-            }
-            entity.setCreatedBy(entityInDb.getCreatedBy());
-            entity.setCreatedDate(entityInDb.getCreatedDate());
-            return converter.convertToDTO(postageFinaceRepository.save(entity));
+        PostageFinaceEntity entity = converter.convertToEntity(postageFinaceDTO);
+        PostageFinaceEntity entityInDb = postageFinaceRepository.findById(id).get();
+        String image = fileUtils.SaveFile(postageFinaceDTO.getMultipartFile());
+        if (!image.equals("")) {
+            entity.setImage(image);
+        } else {
+            entity.setImage(entityInDb.getImage());
         }
-        return new PostageFinaceDTO();
+        entity.setCreatedBy(entityInDb.getCreatedBy());
+        entity.setCreatedDate(entityInDb.getCreatedDate());
+        return converter.convertToDTO(postageFinaceRepository.save(entity));
     }
 
     @Override
